# src/modules/matches/dto/change-team-size.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsInt, Min } from "class-validator";
+
+export class ChangeTeamSizeDto {
+  @ApiProperty({ minimum: 1 })
+  @IsInt()
+  @Min(1)
+  teamSize!: number;
+}
