# src/modules/matches/dto/loser-team.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from "@nestjs/swagger";
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class LoserTeamDto {
+  @ApiProperty()
+  @IsString()
+  @IsNotEmpty()
+  loserTeamId!: string;
+}
